--- a/style.css
+++ b/style.css
@@ -944,8 +944,8 @@
     margin-bottom: 10px;
   }
   
-  .project-item { display: none; }
-  
+/*   .project-item { display: none; }
+   */
   .project-item.active {
     display: block;
     animation: scaleUp 0.25s ease forwards;
